# esp32_btaudio

./: .flake8  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README_SPIFFS.md  TEST_README.md  audio_pipeline_wait_for_event.c  beep-saturation-fixes-from-upload.patch  beep-saturation-fixes.patch  esp32_bt_headset2.code-workspace  esp32_btaudio.code-workspace  git_init.sh  log.txt  memory.md  memory_archive.md  memory_summary.md  output.txt  partitions.csv  platformio.ini  pytest.ini  run_claude.sh  run_claude_qwen.sh  run_claude_qwen.sh~  sdkconfig  sdkconfig.backup  sdkconfig.bt  sdkconfig.defaults  sdkconfig.denky32  sdkconfig.fixes  sdkconfig.old
components/audio_stream/: CMakeLists.txt
esp_bt_audio_source/components/audio_processor/: .component_ignore  CMakeLists.txt  audio_processor.c  audio_processor_beep.c  audio_processor_common.c  audio_processor_config.c  audio_processor_diag.c  audio_processor_engine.c  audio_processor_internal.h  audio_processor_read.c  audio_processor_state.c  audio_processor_sync_diag.c  audio_processor_test_hooks.c  audio_processor_wav.c  audio_queue.c  audio_resampler_stream.c  audio_ringbuffer.c  audio_span_log.c  audio_util.c  beep_manager.c  i2s_frame_extract.c  i2s_manager.c  mem_util.c  play_manager.c  synth_manager.c  uart_source.c
esp_bt_audio_source/components/bt_manager/: CMakeLists.txt  bt_app_core.c  bt_connection.c  bt_connection_manager.c  bt_events_a2dp.c  bt_events_avrc.c  bt_events_gap.c  bt_manager.c  bt_manager_mocks.c  bt_manager_ops.c  bt_pairing_store.c  bt_scan.c  bt_source_component.c  bt_streaming_manager.c
esp_bt_audio_source/components/bt_mock/: CMakeLists.txt  README.md  bt_mock.c  bt_mock_devices.c  bt_mock_devices.h
esp_bt_audio_source/components/command_interface/: CMakeLists.txt  cmd_handlers_audio.c  cmd_handlers_bt.c  cmd_handlers_debug.c  cmd_handlers_files.c  cmd_handlers_system.c  command_interface.c  commands.c  commands_helpers.c  uart_audio.c  uart_audio_frame.c  uart_audio_rx.c
esp_bt_audio_source/components/platform_shim/: CMakeLists.txt  platform_memory.h  platform_memory_esp32.c  platform_memory_host.c  platform_storage.h  platform_storage_esp32.c  platform_storage_host.c  platform_sync.h  platform_sync_esp32.c  platform_sync_host.c  platform_timing.h  platform_timing_esp32.c  platform_timing_host.c
esp_bt_audio_source/main/: CMakeLists.txt  Kconfig.projbuild  README.md  audio_processor.c  audio_processor.h  audio_queue.c  audio_util.c  audio_util.h  beep_manager.c  bt_app_core.c  bt_connection_manager.c  bt_source.c  bt_source.h  bt_source_component.c  bt_streaming_manager.c  i2s_manager.c  main.c  mem_util.c  play_manager.c  spiffs_test.c  synth_manager.c
esp_bt_audio_source/main/include/: audio_processor.h  audio_queue.h  beep_manager.h  bt_app_core.h  bt_source.h  mem_util.h  play_manager.h
esp_bt_audio_source/test/host_test/: CMakeLists.txt  Makefile  README.md  after_host.txt  after_phase2_host.txt  baseline_host.txt  build_output.txt  dump_event_stress_output.c  phase4_7_test_results.txt  test_audio_engine_stress.c  test_audio_fault_recovery.c  test_audio_i2s_host.c  test_audio_processor_beep_edge_cases.c  test_audio_processor_core_logic.c  test_audio_processor_diag.c  test_audio_processor_idle_i2s.c  test_audio_processor_lifecycle.c  test_audio_processor_read.c  test_audio_processor_real.c  test_audio_processor_state.c  test_audio_queue_host.c  test_audio_resampler_stream.c  test_audio_ringbuffer.c  test_audio_ringbuffer_cases.c  test_audio_ringbuffer_shared.h  test_audio_span_log.c  test_audio_tag_alignment.c  test_autoconnect.c  test_beep_flush.c  test_beep_manager.c  test_beep_manager_edge_cases.c  test_bluetooth.c  test_bluetooth_cases.c  test_bluetooth_shared.h  test_bt_app_core_host.c  test_bt_connection_manager.c  test_bt_connection_manager_edge_cases.c  test_bt_ctx_lock.c  test_bt_lock_cb_reentry.c  test_bt_manager_connection_pairing_events.c  (+58 more)
esp_bt_audio_source/test/test_app/: CMakeLists.txt  sdkconfig  test_app_phase_7_2_results.txt
esp_bt_audio_source/test/test_beep_manager/: CMakeLists.txt  sdkconfig  shim_audio_queue.c  test_beep_manager.c
esp_bt_audio_source/test/test_i2s_manager/: CMakeLists.txt  shim_audio_queue.c  test_i2s_manager.c
esp_bt_audio_source/test/test_play_manager/: CMakeLists.txt  partitions.csv  sdkconfig  shim_play_manager_stubs.c
esp_bt_audio_source/test_app/: CMakeLists.txt  TEST_INDEX.md  output.txt  sdkconfig  sdkconfig.defaults
esp_bt_audio_source/test_app/main/: CMakeLists.txt  audio_pipeline_test.c  audio_pipeline_test.c.bak  audio_pipeline_test.h  audio_processor_beep_stub.c  audio_processor_stub.c  audio_processor_test.c  audio_test_helpers.c  audio_test_helpers.h  audio_test_main.c  bt_a2dp_test.c  bt_a2dp_test.h  bt_defs.h  bt_mock_devices.c  bt_mock_devices.h  bt_mock_setup.c  bt_pairing_esp_test.c  bt_pairing_persistence_test.c  bt_pairing_test.c  bt_source.h  bt_source.h_  bt_source_mock.c  bt_source_mock.h  bt_source_stub.c  bt_source_stubs.c  bt_source_test.c  bt_streaming.h_  bt_test_compat.h  bt_test_setup.c  command_interface.c  command_interface.h  command_interface_mock.c  command_interface_test.c  command_parser_test.c  esp32_bt_shim.c  i2s_audio_test.c  i2s_audio_test.h  i2s_channel_test.c  i2s_test.c  main.c  (+17 more)
esp_bt_audio_source/test_app2/: CMakeLists.txt  sdkconfig
esp_bt_audio_source/test_app2/main/: CMakeLists.txt  audio_processor_beep_stub.c  audio_processor_stub.c  bt_a2dp_test.c  bt_connection_shim.c  bt_mock_setup.c  bt_source_mock.c  bt_source_stubs.c  bt_test_setup.c  command_parser_test.c  i2s_audio_test.c  main.c  test_app_main.c  (+4 more)
esp_i2s_source/main/: CMakeLists.txt  Kconfig.projbuild  boot_status.h  clock_diag.c  clock_diag.h  idf_component.yml  main.c
main/: CMakeLists.txt  bt_app_core.c  bt_app_core.h  esp32_btaudio.c  ping_utils.c  radio.c  radio.h  spiffs_utils.c  wifi.c
main/bluetooth/: bt_app_a2dp.c  bt_app_audio.c  bt_app_av.c  bt_app_conn.c  bt_app_conn.c_  bt_app_core.c  bt_app_discovery.c  bt_app_gap.c  bt_app_global.c  bt_app_init.c  bt_app_monitor.c  bt_app_name.c  bt_app_utils.c
(+1013 files in other folders)
