idf_component_register(
    SRCS
        "audio_processor.c"
        "audio_processor_state.c"
        "audio_processor_common.c"
        "audio_processor_beep.c"
        "audio_processor_wav.c"
        "audio_processor_read.c"
        "audio_processor_diag.c"
        "audio_queue.c"
        "audio_util.c"
        "beep_manager.c"
        "i2s_manager.c"
        "play_manager.c"
        "synth_manager.c"
        "mem_util.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        util_safe
        nvs_storage
    PRIV_REQUIRES
        freertos
        driver
        esp_timer
)
