idf_component_register(
    SRCS
        "audio_processor.c"
        "audio_processor_state.c"
        "audio_processor_engine.c"
        "audio_processor_config.c"
        "audio_processor_test_hooks.c"
       
        "audio_processor_beep.c"
        "audio_processor_read.c"
        "audio_processor_diag.c"
        "audio_processor_sync_diag.c"
       
        "audio_ringbuffer.c"
        "audio_span_log.c"
        "audio_util.c"
        "audio_resampler_stream.c"
        "beep_manager.c"
        "i2s_manager.c"
        "i2s_frame_extract.c"
        "synth_manager.c"
        "uart_source.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        util_safe
        nvs_storage
        esp_driver_i2s
    PRIV_REQUIRES
        freertos
        driver
        esp_timer
        platform_shim
)
